# binapi

./: CMakeLists.txt
include/binapi/: enums.hpp
